--- a/sftp-config.json
+++ b/sftp-config.json
@@ -19,11 +19,11 @@
     "password": "d7oj7t72",
     //"port": "22",
     
-    "remote_path": "/wp-content/plugins/bz-views-counter",
+    "remote_path": "/wp-content/plugins/",
     "ignore_regexes": [
         "\\.sublime-(project|workspace)", "sftp-config(-alt\\d?)?\\.json",
         "sftp-settings\\.json", "/venv/", "\\.svn/", "\\.hg/", "\\.git/",
-        "\\.bzr", "_darcs", "CVS", "\\.DS_Store", "Thumbs\\.db", "desktop\\.ini"
+        "\\.bzr", "_darcs", "CVS", "\\.DS_Store", "Thumbs\\.db", "desktop\\.ini", "/advanced-custom-fields-pro/"
     ],
     //"file_permissions": "664",
     //"dir_permissions": "775",
